# GPUBid

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/skills/gpubid/: SKILL.md
notebooks/: demo.ipynb
src/gpubid/: __init__.py  config.py  errors.py  llm.py  market.py  market_v3.py  schema.py
src/gpubid/agents/: __init__.py  _v02_prompts.py  buyer.py  buyer_agent.py  deterministic.py  seller.py
src/gpubid/agents/prompts/: __init__.py
src/gpubid/analysis/: __init__.py  comparator.py  forensics.py  hitl_usecases.py  persuasion.py  regret.py  tournament.py
src/gpubid/benchmark/: __init__.py  posted_price.py  vcg.py  vcg_v2.py
src/gpubid/domain/: __init__.py  offers.py  profiles.py  requirements.py
src/gpubid/engine/: __init__.py  board.py  clearing.py  round_runner.py
src/gpubid/eval/: __init__.py  judge.py  metrics.py
src/gpubid/experiments/: __init__.py  bake_presets.py  run_sweep.py  sim_v2.py
src/gpubid/protocol/: __init__.py  broadcast.py  budget.py  chat_market.py  dialogue.py  eligibility.py  hitl.py  prompt_variants.py  round.py
src/gpubid/viz/: __init__.py  charts.py  chat_stream.py  dialogue_view.py  figures.py  market_view.py  trace_view.py  trading_floor.py
tests/: test_analysis.py  test_benchmark.py  test_budget.py  test_buyer_agent.py  test_config.py  test_engine.py  test_llm.py  test_market_v3.py  test_offers.py  test_presets.py  test_profiles.py  test_protocol_scaffold.py  test_requirements.py  test_schema.py  test_smoke.py  test_vcg_v2.py
tests/fixtures/: llm_fixture_client.py
