[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpubid"
version = "0.1.0"
description = "Agentic GPU auction with structured offer scaffolding (OIT 277, Stanford GSB)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "pulp>=2.8",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "ipywidgets>=8.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
